<resources>
    <string name="app_name">ZerPhone</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Single Flower</string>
    <string name="title_section2">Vase</string>
    <string name="title_section3">Gift</string>
    <string name="title_section4">Planet</string>
    <string name="dialog_add_item">Add new item</string>
    <string name="dialog_edit_item">Edit item</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="string_enter_email">Enter Email</string>
    <string name="string_choose_password">Choose password</string>
    <string name="button_register">Register</string>
    <string name="string_already_registered">Already Registered?</string>
    <string name="button_login">Login</string>
    <string name="login_error_title">Error!</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="string_email">Email</string>
    <string name="textview_password">Password</string>
    <string name="string_user_login">Login</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_button_label">Login</string>
    <string name="button_map">Go to MAPS</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="error_finding_store">Error finding store location on the map</string>
    <string name="zerphone_store">ZerPhone Store</string>
    <string name="error_connect_to_services">Can\'t connect to Google Play services</string>
    <string name="error_find_store">"Can't find Store"</string>
    <string name="locality_dummy">Locality</string>
    <string name="snippet_dummy">Snippet</string>
    <string-array name="categories">
        <item>Single flower</item>
        <item>Vase</item>
        <item>Planet</item>
        <item>Bucket</item>
    </string-array>
    <string name="title_activity_add_item">addItemActivity</string>
    <string name="title_activity_add_edit_item">addEditItem</string>
    <string name="fa_adjust">&#xf042;</string>
    <string name="fa_adn">&#xf170;</string>
    <string name="fa_align_center">&#xf037;</string>
    <string name="fa_align_justify">&#xf039;</string>
    <string name="fa_align_left">&#xf036;</string>
    <string name="fa_align_right">&#xf038;</string>
    <string name="fa_ambulance">&#xf0f9;</string>
    <string name="fa_anchor">&#xf13d;</string>
    <string name="fa_android">&#xf17b;</string>
    <string name="fa_angellist">&#xf209;</string>
    <string name="fa_angle_double_down">&#xf103;</string>
    <string name="fa_angle_double_left">&#xf100;</string>
    <string name="fa_angle_double_right">&#xf101;</string>
    <string name="fa_angle_double_up">&#xf102;</string>
    <string name="fa_angle_down">&#xf107;</string>
    <string name="fa_angle_left">&#xf104;</string>
    <string name="fa_angle_right">&#xf105;</string>
    <string name="fa_angle_up">&#xf106;</string>
    <string name="fa_apple">&#xf179;</string>
    <string name="fa_archive">&#xf187;</string>
    <string name="fa_area_chart">&#xf1fe;</string>
    <string name="fa_arrow_circle_down">&#xf0ab;</string>
    <string name="fa_arrow_circle_left">&#xf0a8;</string>
    <string name="fa_arrow_circle_o_down">&#xf01a;</string>
    <string name="fa_arrow_circle_o_left">&#xf190;</string>
    <string name="fa_arrow_circle_o_right">&#xf18e;</string>
    <string name="fa_arrow_circle_o_up">&#xf01b;</string>
    <string name="fa_arrow_circle_right">&#xf0a9;</string>
    <string name="fa_arrow_circle_up">&#xf0aa;</string>
    <string name="fa_arrow_down">&#xf063;</string>
    <string name="fa_arrow_left">&#xf060;</string>
    <string name="fa_arrow_right">&#xf061;</string>
    <string name="fa_arrow_up">&#xf062;</string>
    <string name="fa_arrows">&#xf047;</string>
    <string name="fa_arrows_alt">&#xf0b2;</string>
    <string name="fa_arrows_h">&#xf07e;</string>
    <string name="fa_arrows_v">&#xf07d;</string>
    <string name="fa_asterisk">&#xf069;</string>
    <string name="fa_at">&#xf1fa;</string>
    <string name="fa_automobile">&#xf1b9;</string>
    <string name="fa_backward">&#xf04a;</string>
    <string name="fa_ban">&#xf05e;</string>
    <string name="fa_bank">&#xf19c;</string>
    <string name="fa_bar_chart">&#xf080;</string>
    <string name="fa_bar_chart_o">&#xf080;</string>
    <string name="fa_barcode">&#xf02a;</string>
    <string name="fa_bars">&#xf0c9;</string>
    <string name="fa_beer">&#xf0fc;</string>
    <string name="fa_behance">&#xf1b4;</string>
    <string name="fa_behance_square">&#xf1b5;</string>
    <string name="fa_bell">&#xf0f3;</string>
    <string name="fa_bell_o">&#xf0a2;</string>
    <string name="fa_bell_slash">&#xf1f6;</string>
    <string name="fa_bell_slash_o">&#xf1f7;</string>
    <string name="fa_bicycle">&#xf206;</string>
    <string name="fa_binoculars">&#xf1e5;</string>
    <string name="fa_birthday_cake">&#xf1fd;</string>
    <string name="fa_bitbucket">&#xf171;</string>
    <string name="fa_bitbucket_square">&#xf172;</string>
    <string name="fa_bitcoin">&#xf15a;</string>
    <string name="fa_bold">&#xf032;</string>
    <string name="fa_bolt">&#xf0e7;</string>
    <string name="fa_bomb">&#xf1e2;</string>
    <string name="fa_book">&#xf02d;</string>
    <string name="fa_bookmark">&#xf02e;</string>
    <string name="fa_bookmark_o">&#xf097;</string>
    <string name="fa_briefcase">&#xf0b1;</string>
    <string name="fa_btc">&#xf15a;</string>
    <string name="fa_bug">&#xf188;</string>
    <string name="fa_building">&#xf1ad;</string>
    <string name="fa_building_o">&#xf0f7;</string>
    <string name="fa_bullhorn">&#xf0a1;</string>
    <string name="fa_bullseye">&#xf140;</string>
    <string name="fa_bus">&#xf207;</string>
    <string name="fa_cab">&#xf1ba;</string>
    <string name="fa_calculator">&#xf1ec;</string>
    <string name="fa_calendar">&#xf073;</string>
    <string name="fa_calendar_o">&#xf133;</string>
    <string name="fa_camera">&#xf030;</string>
    <string name="fa_camera_retro">&#xf083;</string>
    <string name="fa_car">&#xf1b9;</string>
    <string name="fa_caret_down">&#xf0d7;</string>
    <string name="fa_caret_left">&#xf0d9;</string>
    <string name="fa_caret_right">&#xf0da;</string>
    <string name="fa_caret_square_o_down">&#xf150;</string>
    <string name="fa_caret_square_o_left">&#xf191;</string>
    <string name="fa_caret_square_o_right">&#xf152;</string>
    <string name="fa_caret_square_o_up">&#xf151;</string>
    <string name="fa_caret_up">&#xf0d8;</string>
    <string name="fa_cc">&#xf20a;</string>
    <string name="fa_cc_amex">&#xf1f3;</string>
    <string name="fa_cc_discover">&#xf1f2;</string>
    <string name="fa_cc_mastercard">&#xf1f1;</string>
    <string name="fa_cc_paypal">&#xf1f4;</string>
    <string name="fa_cc_stripe">&#xf1f5;</string>
    <string name="fa_cc_visa">&#xf1f0;</string>
    <string name="fa_certificate">&#xf0a3;</string>
    <string name="fa_chain">&#xf0c1;</string>
    <string name="fa_chain_broken">&#xf127;</string>
    <string name="fa_check">&#xf00c;</string>
    <string name="fa_check_circle">&#xf058;</string>
    <string name="fa_check_circle_o">&#xf05d;</string>
    <string name="fa_check_square">&#xf14a;</string>
    <string name="fa_check_square_o">&#xf046;</string>
    <string name="fa_chevron_circle_down">&#xf13a;</string>
    <string name="fa_chevron_circle_left">&#xf137;</string>
    <string name="fa_chevron_circle_right">&#xf138;</string>
    <string name="fa_chevron_circle_up">&#xf139;</string>
    <string name="fa_chevron_down">&#xf078;</string>
    <string name="fa_chevron_left">&#xf053;</string>
    <string name="fa_chevron_right">&#xf054;</string>
    <string name="fa_chevron_up">&#xf077;</string>
    <string name="fa_child">&#xf1ae;</string>
    <string name="fa_circle">&#xf111;</string>
    <string name="fa_circle_o">&#xf10c;</string>
    <string name="fa_circle_o_notch">&#xf1ce;</string>
    <string name="fa_circle_thin">&#xf1db;</string>
    <string name="fa_clipboard">&#xf0ea;</string>
    <string name="fa_clock_o">&#xf017;</string>
    <string name="fa_close">&#xf00d;</string>
    <string name="fa_cloud">&#xf0c2;</string>
    <string name="fa_cloud_download">&#xf0ed;</string>
    <string name="fa_cloud_upload">&#xf0ee;</string>
    <string name="fa_cny">&#xf157;</string>
    <string name="fa_code">&#xf121;</string>
    <string name="fa_code_fork">&#xf126;</string>
    <string name="fa_codepen">&#xf1cb;</string>
    <string name="fa_coffee">&#xf0f4;</string>
    <string name="fa_cog">&#xf013;</string>
    <string name="fa_cogs">&#xf085;</string>
    <string name="fa_columns">&#xf0db;</string>
    <string name="fa_comment">&#xf075;</string>
    <string name="fa_comment_o">&#xf0e5;</string>
    <string name="fa_comments">&#xf086;</string>
    <string name="fa_comments_o">&#xf0e6;</string>
    <string name="fa_compass">&#xf14e;</string>
    <string name="fa_compress">&#xf066;</string>
    <string name="fa_copy">&#xf0c5;</string>
    <string name="fa_copyright">&#xf1f9;</string>
    <string name="fa_credit_card">&#xf09d;</string>
    <string name="fa_crop">&#xf125;</string>
    <string name="fa_crosshairs">&#xf05b;</string>
    <string name="fa_css3">&#xf13c;</string>
    <string name="fa_cube">&#xf1b2;</string>
    <string name="fa_cubes">&#xf1b3;</string>
    <string name="fa_cut">&#xf0c4;</string>
    <string name="fa_cutlery">&#xf0f5;</string>
    <string name="fa_dashboard">&#xf0e4;</string>
    <string name="fa_database">&#xf1c0;</string>
    <string name="fa_dedent">&#xf03b;</string>
    <string name="fa_delicious">&#xf1a5;</string>
    <string name="fa_desktop">&#xf108;</string>
    <string name="fa_deviantart">&#xf1bd;</string>
    <string name="fa_digg">&#xf1a6;</string>
    <string name="fa_dollar">&#xf155;</string>
    <string name="fa_dot_circle_o">&#xf192;</string>
    <string name="fa_download">&#xf019;</string>
    <string name="fa_dribbble">&#xf17d;</string>
    <string name="fa_dropbox">&#xf16b;</string>
    <string name="fa_drupal">&#xf1a9;</string>
    <string name="fa_edit">&#xf044;</string>
    <string name="fa_eject">&#xf052;</string>
    <string name="fa_ellipsis_h">&#xf141;</string>
    <string name="fa_ellipsis_v">&#xf142;</string>
    <string name="fa_empire">&#xf1d1;</string>
    <string name="fa_envelope">&#xf0e0;</string>
    <string name="fa_envelope_o">&#xf003;</string>
    <string name="fa_envelope_square">&#xf199;</string>
    <string name="fa_eraser">&#xf12d;</string>
    <string name="fa_eur">&#xf153;</string>
    <string name="fa_euro">&#xf153;</string>
    <string name="fa_exchange">&#xf0ec;</string>
    <string name="fa_exclamation">&#xf12a;</string>
    <string name="fa_exclamation_circle">&#xf06a;</string>
    <string name="fa_exclamation_triangle">&#xf071;</string>
    <string name="fa_expand">&#xf065;</string>
    <string name="fa_external_link">&#xf08e;</string>
    <string name="fa_external_link_square">&#xf14c;</string>
    <string name="fa_eye">&#xf06e;</string>
    <string name="fa_eye_slash">&#xf070;</string>
    <string name="fa_eyedropper">&#xf1fb;</string>
    <string name="fa_facebook">&#xf09a;</string>
    <string name="fa_facebook_square">&#xf082;</string>
    <string name="fa_fast_backward">&#xf049;</string>
    <string name="fa_fast_forward">&#xf050;</string>
    <string name="fa_fax">&#xf1ac;</string>
    <string name="fa_female">&#xf182;</string>
    <string name="fa_fighter_jet">&#xf0fb;</string>
    <string name="fa_file">&#xf15b;</string>
    <string name="fa_file_archive_o">&#xf1c6;</string>
    <string name="fa_file_audio_o">&#xf1c7;</string>
    <string name="fa_file_code_o">&#xf1c9;</string>
    <string name="fa_file_excel_o">&#xf1c3;</string>
</resources>