<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.colman.zerphonefinall.SignUpActivity">


    <ImageView android:src="@drawable/logo"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_enter_email" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/editTextEmail"
        android:hint="Email" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_choose_password" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/editTextPassword"
        android:hint="Password" />



    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:text="@string/button_register"
        android:id="@+id/buttonRegister"
        android:background="@drawable/login_button"
        android:layout_gravity="center_horizontal"
        android:typeface="serif"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/string_already_registered" />

    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/button_login"
        android:id="@+id/buttonLogin"
        android:background="@drawable/login_button"
        android:layout_gravity="center_horizontal"
        android:typeface="serif"
        />

    <Button
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/button_map"
        android:id="@+id/buttonMap"
        android:background="@drawable/login_button"
        android:layout_gravity="center_horizontal"
        android:typeface="serif"
        />

</LinearLayout>
